@@ -591,10 +591,11 @@ VOID SetLoaderDefaults (LOADER_ENTRY *Entry, CHAR16 *LoaderPath, REFIT_VOLUME *V
             ShortcutLetter = OSIconName[0];
         }
 
-        // Add every "word" in the volume label, delimited by spaces, dashes (-), or
-        // underscores (_), to the list of hints to be used in searching for OS
-        // icons.
-        MergeWords (&OSIconName, Volume->VolName, L',');
+        // Add every "word" in the filesystem and partition names, delimited by
+        // spaces, dashes (-), underscores (_), or colons (:), to the list of
+        // hints to be used in searching for OS icons.
+        MergeWords(&OSIconName, Volume->FsName, L',');
+        MergeWords(&OSIconName, Volume->PartName, L',');
     } // if/else network boot
 
     // detect specific loaders
@@ -985,7 +986,7 @@ static BOOLEAN ShouldScan (REFIT_VOLUME *Volume, CHAR16 *Path) {
 
     if (FilerScan) {
         VolGuid = GuidAsString (&(Volume->PartGuid));
-        if ((IsIn (Volume->VolName, GlobalConfig.DontScanVolumes)) ||
+        if ((IsIn (Volume->FsName, GlobalConfig.DontScanVolumes)) ||
             (IsIn (Volume->PartName, GlobalConfig.DontScanVolumes)) ||
             (IsIn (VolGuid, GlobalConfig.DontScanVolumes))
         ) {
@@ -1003,8 +1004,10 @@ static BOOLEAN ShouldScan (REFIT_VOLUME *Volume, CHAR16 *Path) {
     // See if Path includes an explicit volume declaration that's NOT Volume....
     PathCopy = StrDuplicate (Path);
     if (SplitVolumeAndFilename (&PathCopy, &VolName)) {
-        if (VolName && !MyStriCmp (VolName, Volume->VolName)) {
-            ScanIt = FALSE;
+        if (VolName && (!MyStriCmp (VolName, Volume->FsName) ||
+            !MyStriCmp(VolName, Volume->PartName))
+        ) {
+                ScanIt = FALSE;
         } // if
     } // if Path includes volume specification
     MyFreePool (PathCopy);
@@ -1330,7 +1333,7 @@ static VOID ScanNetboot() {
                 CopyMem (NetVolume, SelfVolume, sizeof (REFIT_VOLUME));
                 NetVolume->DiskKind = DISK_KIND_NET;
                 NetVolume->VolBadgeImage = BuiltinIcon (BUILTIN_ICON_VOL_NET);
-                NetVolume->PartName = NetVolume->VolName = NULL;
+                NetVolume->PartName = NetVolume->VolName = NetVolume->FsName = NULL;
                 AddLoaderEntry (iPXEFileName, Location, NetVolume, TRUE);
                 MyFreePool (NetVolume);
             } // if support files exist and are valid
